Fix footer nav links spacing

--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -63,6 +63,7 @@
 
     .footer__content {
         row-gap: var(--spacing-7);
+        column-gap: var(--spacing-7);
     }
 
     .company__brand {
@@ -85,6 +86,45 @@
     }
     .row {
         padding: 0 var(--spacing-10);
+    }
+
+    /* ---------- Advantages Section ---------- */
+
+    .row.advantages-section__content {
+        padding-right: var(--spacing-11);
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        row-gap: var(--spacing-12);
+    }
+
+    /* ---------- Package Section ---------- */
+
+    .row.package-section__content {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column;
+        row-gap: var(--spacing-12);
+    }
+
+    /* ---------- Footer---------- */
+
+    .footer__content {
+        row-gap: var(--spacing-7);
+        column-gap: var(--spacing-7);
+    }
+
+    .company__brand {
+        -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+        flex: 100%;
+    }
+
+    /* */
+    .cta-section .row {
+        row-gap: var(--spacing-7);
     }
 }
 
@@ -116,6 +156,45 @@
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
+        row-gap: var(--spacing-7);
+    }
+
+    /* ---------- Advantages Section ---------- */
+
+    .row.advantages-section__content {
+        padding-right: var(--spacing-11);
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        row-gap: var(--spacing-12);
+    }
+
+    /* ---------- Package Section ---------- */
+
+    .row.package-section__content {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column;
+        row-gap: var(--spacing-12);
+    }
+
+    /* ---------- Footer---------- */
+
+    .footer__content {
+        row-gap: var(--spacing-7);
+        column-gap: var(--spacing-7);
+    }
+
+    .company__brand {
+        -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+        flex: 100%;
+    }
+
+    /* */
+    .cta-section .row {
         row-gap: var(--spacing-7);
     }
 }
